--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,11 @@ pdfplumber
 python-docx
 Pillow
 qiskit==0.33.1
+streamlit
+qiskit==0.39.0
+qiskit-terra==0.22.0
+qiskit-aer==0.11.0
+qiskit-ibmq-provider==0.19.0
+Cython
 
 
