--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,28 @@
 streamlit==1.35.0
-qiskit==0.39.0
-qiskit-terra==0.22.0
-qiskit-aer==0.11.0
-qiskit-ibmq-provider==0.19.2
-transformers==4.41.1
+numpy==1.23.5
 pandas==2.2.2
 pdfplumber==0.11.0
 python-docx==1.1.2
 Pillow==10.3.0
-numpy==1.23.5
 scipy==1.13.1
 Cython==3.0.10
+altair<6,>=4.0
+blinker<2,>=1.0.0
+cachetools<6,>=4.0
+click<9,>=7.0
+packaging<25,>=16.8
+protobuf<5,>=3.20
+pyarrow>=7.0
+requests<3,>=2.27
+rich<14,>=10.14.0
+tenacity<9,>=8.1.0
+toml<2,>=0.10.1
+typing-extensions<5,>=4.3.0
+gitpython!=3.1.19,<4,>=3.0.7
+pydeck<1,>=0.8.0b4
+tornado<7,>=6.0.3
+watchdog>=2.1.5
+qiskit==0.39.0
+cirq==0.15.0
+pyquil==3.0.0
 pennylane==0.30.0
