--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
 streamlit==1.18.1
+altair==4.2.2
+click==8.0.0
+qiskit==0.39.0
+cirq==0.15.0
+pennylane==0.30.0
+projectq==0.7.1
+pyquil==3.0.0
+matplotlib
