--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,31 @@
 streamlit==1.18.1
 altair==4.2.2
 click==8.0.0
-qiskit==0.38.0  # Use an older version that might not have the tweedledum dependency
+qiskit==0.38.0
 cirq==0.15.0
 pennylane==0.30.0
 projectq==0.7.1
 pyquil==3.0.0
 matplotlib
+blinker>=1.0.0
+cachetools>=4.0
+importlib-metadata>=1.4
+numpy
+packaging>=14.1
+pandas>=0.25
+pillow>=6.2.0
+protobuf<4,>=3.12
+pyarrow>=4.0
+pympler>=0.9
+python-dateutil
+requests>=2.4
+rich>=10.11.0
+semver
+toml
+typing-extensions>=3.10.0.0
+tzlocal>=1.1
+validators>=0.2
+gitpython!=3.1.19
+pydeck>=0.1.dev5
+tornado>=6.0.3
+watchdog
