--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 streamlit
-qiskit==0.41.0
-qiskit-aer==0.11.2
+openai==1.30.4
+qiskit
 pennylane
+scikit-learn
 numpy
 pandas
 matplotlib
-scikit-learn
-openai
