--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 streamlit
 openai==1.30.4
-qiskit
-pennylane
-scikit-learn
-numpy
-pandas
-matplotlib
+qiskit==0.41.0
+qiskit-aer==0.11.2
+pennylane==0.36.0
+scikit-learn==1.5.0
+numpy==1.26.4
+pandas==2.2.2
+matplotlib==3.9.0
