--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit
+streamlit==1.35.0
 openai==1.30.4
 qiskit==0.41.0
 qiskit-aer==0.11.2
 pennylane==0.36.0
 scikit-learn==1.5.0
-numpy<1.24
+numpy==1.23.5
 pandas==2.2.2
 matplotlib==3.9.0
