--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,11 @@ pandas==2.2.2
 matplotlib==3.9.0
 openai==1.30.4
 transformers
-transformers
 torch
+transformers
+tensorflow
+transformers
+tensorflow
+pennylane
+streamlit
+
