--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,16 @@ transformers
 tensorflow
 pennylane
 streamlit
+qiskit==0.41.0
+qiskit-ibmq-provider
+pennylane==0.36.0
+streamlit==1.35.0
+tensorflow
+torch
+scikit-learn==1.5.0
+numpy==1.23.5
+pandas==2.2.2
+matplotlib==3.9.0
+transformers
+google-api-python-client
 
